running tests on changes

--- a/package.json
+++ b/package.json
@@ -2,18 +2,17 @@
   "name": "bet-functions",
   "version": "1.0.0",
   "description": "Google Cloud Functions for the bet friend app",
-  "main": "index.js",
+  "main": "src/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Pablo Baldez",
   "license": "LGPL-3.0",
   "dependencies": {
-    "@google-cloud/firestore": "^5.0.2",
-    "@google-cloud/functions": "^2.2.0",
     "@google-cloud/functions-framework": "^3.1.2",
     "axios": "^0.27.2",
-    "dotenv": "^16.0.1"
+    "dotenv": "^16.0.1",
+    "firebase-admin": "^11.0.0"
   },
   "devDependencies": {
     "@types/node": "^18.6.1"
