--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Google Cloud Functions for the bet friend app",
   "main": "src/app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+     "start": "functions-framework --target=bet-football"
   },
   "author": "Pablo Baldez",
   "license": "LGPL-3.0",
