--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "LGPL-3.0",
   "dependencies": {
     "@google-cloud/functions-framework": "^3.1.2",
+    "@google-cloud/tasks": "^3.0.0",
     "axios": "^0.27.2",
     "dotenv": "^16.0.1",
     "firebase-admin": "^11.0.0"
