--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Pablo Baldez",
   "license": "LGPL-3.0",
   "dependencies": {
+    "@datastructures-js/binary-search-tree": "^5.0.1",
     "@google-cloud/functions-framework": "^3.1.2",
     "@google-cloud/tasks": "^3.0.0",
     "axios": "^0.27.2",
