--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,9 @@
     "cSpell.words": [
         "Baldez",
         "datasource",
-        "datasources"
+        "datasources",
+        "firestore",
+        "Snaptshot"
     ],
     "editor.formatOnSave": true
 }
