fix: resolve errors in football datastore
After running a battery of tests, it seems that all runtime errors in football competition datasource was solved

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,6 @@
         "firestore",
         "Snaptshot"
     ],
-    "editor.formatOnSave": true
+    "editor.formatOnSave": true,
+    "debug.javascript.autoAttachFilter": "onlyWithFlag"
 }
